# egtb-probe

./: .gitignore  CMakeLists.txt  README.md
src/: egtb.cpp  egtb.h  main.cpp
src/tb/egtb/: tb_reader.cpp  tb_reader.h
